--- a/css/astyles.css
+++ b/css/astyles.css
@@ -409,8 +409,10 @@ bottom: 600px;
 }
 
 .rw-sentence{
-	margin: 0;
-	text-align: left;
+	display: block;
+margin-left: auto;
+margin-right: auto;
+text-align: center;
 	text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
 }
 .rw-sentence span{
@@ -476,9 +478,10 @@ bottom: 600px;
 }
 
 .rw-wrapper{
-  position: relative;
-  bottom: 100px;
-  left: 270px;
+display: block;
+margin-left: auto;
+margin-right: auto;
+text-align: center;
 }
 
 #joinus-description{
